@@ -1,10 +1,12 @@
-package com.hibiscusmc.hmccosmetics.user;
+package com.hibiscusmc.hmccosmetics.user.manager;
 
 import com.hibiscusmc.hmccosmetics.HMCCosmeticsPlugin;
 import com.hibiscusmc.hmccosmetics.config.Settings;
 import com.hibiscusmc.hmccosmetics.config.WardrobeSettings;
+import com.hibiscusmc.hmccosmetics.cosmetic.Cosmetic;
 import com.hibiscusmc.hmccosmetics.cosmetic.CosmeticSlot;
 import com.hibiscusmc.hmccosmetics.nms.NMSHandlers;
+import com.hibiscusmc.hmccosmetics.user.CosmeticUser;
 import com.hibiscusmc.hmccosmetics.util.MessagesUtil;
 import com.hibiscusmc.hmccosmetics.util.ServerUtils;
 import com.hibiscusmc.hmccosmetics.util.packets.PacketManager;
@@ -22,49 +24,51 @@ import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.scheduler.BukkitRunnable;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 
-public class Wardrobe {
+public class UserWardrobeManager {
 
-    private int NPC_ID;
+    private final int NPC_ID;
+    private final int ARMORSTAND_ID;
+    private final UUID WARDROBE_UUID;
     private String npcName;
-    private UUID WARDROBE_UUID;
-    private int ARMORSTAND_ID;
     private GameMode originalGamemode;
-    private CosmeticUser VIEWER;
-    private Location viewingLocation;
-    private Location npcLocation;
+    private final CosmeticUser user;
+    private final Location viewingLocation;
+    private final Location npcLocation;
     private Location exitLocation;
     private BossBar bossBar;
     private boolean active;
     private WardrobeStatus wardrobeStatus;
 
-    public Wardrobe(CosmeticUser user) {
+    public UserWardrobeManager(CosmeticUser user, Location exitLocation, Location viewingLocation, Location npcLocation) {
         NPC_ID = NMSHandlers.getHandler().getNextEntityId();
         ARMORSTAND_ID = NMSHandlers.getHandler().getNextEntityId();
         WARDROBE_UUID = UUID.randomUUID();
-        VIEWER = user;
+        this.user = user;
+
+        this.exitLocation = exitLocation;
+        this.viewingLocation = viewingLocation;
+        this.npcLocation = npcLocation;
+
         wardrobeStatus = WardrobeStatus.SETUP;
     }
 
     public void start() {
         setWardrobeStatus(WardrobeStatus.STARTING);
-        Player player = VIEWER.getPlayer();
+        Player player = user.getPlayer();
 
         this.originalGamemode = player.getGameMode();
         if (WardrobeSettings.isReturnLastLocation()) {
             this.exitLocation = player.getLocation().clone();
-        } else {
-            this.exitLocation = WardrobeSettings.getLeaveLocation();
         }
 
-        viewingLocation = WardrobeSettings.getViewerLocation();
-        npcLocation = WardrobeSettings.getWardrobeLocation();
-
-        VIEWER.hidePlayer();
-        List<Player> viewer = List.of(player);
+        user.hidePlayer();
+        List<Player> viewer = Collections.singletonList(player);
         List<Player> outsideViewers = PacketManager.getViewers(viewingLocation);
         outsideViewers.remove(player);
 
@@ -99,17 +103,18 @@ public class Wardrobe {
             PacketManager.sendRotationPacket(NPC_ID, npcLocation, true, viewer);
 
             // Misc
-            if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BACKPACK)) {
-                PacketManager.ridingMountPacket(NPC_ID, VIEWER.getBackpackEntity().getEntityId(), viewer);
+            if (user.hasCosmeticInSlot(CosmeticSlot.BACKPACK)) {
+                user.getUserBackpackManager().getArmorStand().teleport(npcLocation.clone().add(0, 2, 0));
+                PacketManager.ridingMountPacket(NPC_ID, user.getUserBackpackManager().getFirstArmorStandId(), viewer);
             }
 
-            if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BALLOON)) {
-                PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getPufferfishBalloonId(), -1, viewer);
-                PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getPufferfishBalloonId(), NPC_ID, viewer); // This needs a possible fix
+            if (user.hasCosmeticInSlot(CosmeticSlot.BALLOON)) {
+                user.getBalloonManager().sendRemoveLeashPacket(viewer);
+                user.getBalloonManager().sendLeashPacket(NPC_ID);
                 //PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getModelId(), NPC_ID, viewer);
 
-                PacketManager.sendTeleportPacket(VIEWER.getBalloonEntity().getPufferfishBalloonId(), npcLocation.clone().add(Settings.getBalloonOffset()), false, viewer);
-                PacketManager.sendTeleportPacket(VIEWER.getBalloonEntity().getModelId(), npcLocation.clone().add(Settings.getBalloonOffset()), false, viewer);
+                PacketManager.sendTeleportPacket(user.getBalloonManager().getPufferfishBalloonId(), npcLocation.clone().add(Settings.getBalloonOffset()), false, viewer);
+                user.getBalloonManager().getModelEntity().teleport(npcLocation.clone().add(Settings.getBalloonOffset()));
             }
 
             if (WardrobeSettings.getEnabledBossbar()) {
@@ -130,7 +135,7 @@ public class Wardrobe {
 
         if (WardrobeSettings.isEnabledTransition()) {
             MessagesUtil.sendTitle(
-                    VIEWER.getPlayer(),
+                    user.getPlayer(),
                     WardrobeSettings.getTransitionText(),
                     WardrobeSettings.getTransitionFadeIn(),
                     WardrobeSettings.getTransitionStay(),
@@ -145,51 +150,54 @@ public class Wardrobe {
 
     public void end() {
         setWardrobeStatus(WardrobeStatus.STOPPING);
-        Player player = VIEWER.getPlayer();
+        Player player = user.getPlayer();
 
-        List<Player> viewer = List.of(player);
+        List<Player> viewer = Collections.singletonList(player);
         List<Player> outsideViewers = PacketManager.getViewers(viewingLocation);
         outsideViewers.remove(player);
 
-        MessagesUtil.sendMessage(player, "closed-wardrobe");
+        if (player != null) MessagesUtil.sendMessage(player, "closed-wardrobe");
 
         Runnable run = () -> {
             this.active = false;
 
             // NPC
-            if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BALLOON)) PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getModelId(), -1, viewer);
+            if (user.hasCosmeticInSlot(CosmeticSlot.BALLOON)) user.getBalloonManager().sendRemoveLeashPacket();
             PacketManager.sendEntityDestroyPacket(NPC_ID, viewer); // Success
             PacketManager.sendRemovePlayerPacket(player, WARDROBE_UUID, viewer); // Success
 
             // Player
             PacketManager.sendCameraPacket(player.getEntityId(), viewer);
-            PacketManager.gamemodeChangePacket(player, ServerUtils.convertGamemode(this.originalGamemode)); // Success
 
             // Armorstand
             PacketManager.sendEntityDestroyPacket(ARMORSTAND_ID, viewer); // Sucess
 
             //PacketManager.sendEntityDestroyPacket(player.getEntityId(), viewer); // Success
-            player.setGameMode(this.originalGamemode);
-            VIEWER.showPlayer();
+            if (WardrobeSettings.isForceExitGamemode()) {
+                MessagesUtil.sendDebugMessages("Force Exit Gamemode " + WardrobeSettings.getExitGamemode());
+                player.setGameMode(WardrobeSettings.getExitGamemode());
+                PacketManager.gamemodeChangePacket(player, ServerUtils.convertGamemode(WardrobeSettings.getExitGamemode())); // Success
+            } else {
+                MessagesUtil.sendDebugMessages("Original Gamemode " + this.originalGamemode);
+                player.setGameMode(this.originalGamemode);
+                PacketManager.gamemodeChangePacket(player, ServerUtils.convertGamemode(this.originalGamemode)); // Success
+            }
+            user.showPlayer();
 
-            if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BACKPACK)) {
-                VIEWER.respawnBackpack();
+            if (user.hasCosmeticInSlot(CosmeticSlot.BACKPACK)) {
+                user.respawnBackpack();
                 //PacketManager.ridingMountPacket(player.getEntityId(), VIEWER.getBackpackEntity().getEntityId(), viewer);
             }
 
-            if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BALLOON)) {
-                VIEWER.respawnBalloon();
+            if (user.hasCosmeticInSlot(CosmeticSlot.BALLOON)) {
+                user.respawnBalloon();
                 //PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getPufferfishBalloonId(), player.getEntityId(), viewer);
             }
 
-            if (exitLocation == null) {
-                player.teleport(player.getWorld().getSpawnLocation());
-            } else {
-                player.teleport(exitLocation);
-            }
+            player.teleport(Objects.requireNonNullElseGet(exitLocation, () -> player.getWorld().getSpawnLocation()));
 
             if (WardrobeSettings.isEquipPumpkin()) {
-                NMSHandlers.getHandler().equipmentSlotUpdate(VIEWER.getPlayer().getEntityId(), EquipmentSlot.HEAD, player.getInventory().getHelmet(), viewer);
+                NMSHandlers.getHandler().equipmentSlotUpdate(user.getPlayer().getEntityId(), EquipmentSlot.HEAD, player.getInventory().getHelmet(), viewer);
             }
 
             if (WardrobeSettings.getEnabledBossbar()) {
@@ -198,7 +206,14 @@ public class Wardrobe {
                 target.hideBossBar(bossBar);
             }
 
-            VIEWER.updateCosmetic();
+            // For Wardrobe Temp Cosmetics
+            for (Cosmetic cosmetic : user.getCosmetics()) {
+                if (cosmetic.requiresPermission()) {
+                    if (!player.hasPermission(cosmetic.getPermission())) user.removeCosmeticSlot(cosmetic.getSlot());
+                }
+            }
+
+            user.updateCosmetic();
         };
         run.run();
     }
@@ -209,49 +224,50 @@ public class Wardrobe {
         BukkitRunnable runnable = new BukkitRunnable() {
             @Override
             public void run() {
-                if (active == false) {
-                    MessagesUtil.sendDebugMessages("Active is false");
+                Player player = user.getPlayer();
+                if (!active || player == null) {
+                    MessagesUtil.sendDebugMessages("WardrobeEnd[user=" + user.getUniqueId() + ",reason=Active is false]");
                     this.cancel();
                     return;
                 }
-                MessagesUtil.sendDebugMessages("Update ");
-                List<Player> viewer = List.of(VIEWER.getPlayer());
+                MessagesUtil.sendDebugMessages("WardrobeUpdate[user= " + user.getUniqueId() + ",status=" + getWardrobeStatus() + "]");
+                List<Player> viewer = Collections.singletonList(player);
                 List<Player> outsideViewers = PacketManager.getViewers(viewingLocation);
-                outsideViewers.remove(VIEWER.getPlayer());
+                outsideViewers.remove(player);
 
                 Location location = WardrobeSettings.getWardrobeLocation().clone();
                 int yaw = data.get();
                 location.setYaw(yaw);
 
                 PacketManager.sendLookPacket(NPC_ID, location, viewer);
-                VIEWER.hidePlayer();
+                user.hidePlayer();
                 int rotationSpeed = WardrobeSettings.getRotationSpeed();
-                location.setYaw(getNextYaw(yaw - 30, rotationSpeed));
+                location.setYaw(ServerUtils.getNextYaw(yaw - 30, rotationSpeed));
                 PacketManager.sendRotationPacket(NPC_ID, location, true, viewer);
-                int nextyaw = getNextYaw(yaw, rotationSpeed);
+                int nextyaw = ServerUtils.getNextYaw(yaw, rotationSpeed);
                 data.set(nextyaw);
 
                 for (CosmeticSlot slot : CosmeticSlot.values()) {
-                    PacketManager.equipmentSlotUpdate(NPC_ID, VIEWER, slot, viewer);
+                    PacketManager.equipmentSlotUpdate(NPC_ID, user, slot, viewer);
                 }
 
-                if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BACKPACK)) {
-                    PacketManager.sendTeleportPacket(VIEWER.getArmorstandId(), location, false, viewer);
-                    PacketManager.ridingMountPacket(NPC_ID, VIEWER.getBackpackEntity().getEntityId(), viewer);
-                    VIEWER.getBackpackEntity().setRotation(nextyaw, 0);
-                    PacketManager.sendEntityDestroyPacket(VIEWER.getArmorstandId(), outsideViewers);
+                if (user.hasCosmeticInSlot(CosmeticSlot.BACKPACK)) {
+                    PacketManager.sendTeleportPacket(user.getUserBackpackManager().getFirstArmorStandId(), location, false, viewer);
+                    PacketManager.ridingMountPacket(NPC_ID, user.getUserBackpackManager().getFirstArmorStandId(), viewer);
+                    user.getUserBackpackManager().getArmorStand().setRotation(nextyaw, 0);
+                    PacketManager.sendEntityDestroyPacket(user.getUserBackpackManager().getFirstArmorStandId(), outsideViewers);
                 }
 
-                if (VIEWER.hasCosmeticInSlot(CosmeticSlot.BALLOON)) {
-                    PacketManager.sendTeleportPacket(VIEWER.getBalloonEntity().getPufferfishBalloonId(), WardrobeSettings.getWardrobeLocation().add(Settings.getBalloonOffset()), false, viewer);
-                    VIEWER.getBalloonEntity().getModelEntity().teleport(WardrobeSettings.getWardrobeLocation().add(Settings.getBalloonOffset()));
-                    PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getPufferfishBalloonId(), -1, outsideViewers);
-                    PacketManager.sendEntityDestroyPacket(VIEWER.getBalloonEntity().getModelId(), outsideViewers);
-                    //PacketManager.sendLeashPacket(VIEWER.getBalloonEntity().getModelId(), NPC_ID, viewer); // Pufferfish goes away for some reason?
+                if (user.hasCosmeticInSlot(CosmeticSlot.BALLOON)) {
+                    PacketManager.sendTeleportPacket(user.getBalloonManager().getPufferfishBalloonId(), WardrobeSettings.getWardrobeLocation().add(Settings.getBalloonOffset()), false, viewer);
+                    user.getBalloonManager().getModelEntity().teleport(WardrobeSettings.getWardrobeLocation().add(Settings.getBalloonOffset()));
+                    user.getBalloonManager().sendRemoveLeashPacket(outsideViewers);
+                    PacketManager.sendEntityDestroyPacket(user.getBalloonManager().getModelId(), outsideViewers);
+                    user.getBalloonManager().sendLeashPacket(NPC_ID);
                 }
 
                 if (WardrobeSettings.isEquipPumpkin()) {
-                    NMSHandlers.getHandler().equipmentSlotUpdate(VIEWER.getPlayer().getEntityId(), EquipmentSlot.HEAD, new ItemStack(Material.CARVED_PUMPKIN), viewer);
+                    NMSHandlers.getHandler().equipmentSlotUpdate(user.getPlayer().getEntityId(), EquipmentSlot.HEAD, new ItemStack(Material.CARVED_PUMPKIN), viewer);
                 }
             }
         };
@@ -259,16 +275,7 @@ public class Wardrobe {
         runnable.runTaskTimer(HMCCosmeticsPlugin.getInstance(), 0, 2);
     }
 
-    private static int getNextYaw(final int current, final int rotationSpeed) {
-        int nextYaw = current + rotationSpeed;
-        if (nextYaw > 179) {
-            nextYaw = (current + rotationSpeed) - 358;
-            return nextYaw;
-        }
-        return nextYaw;
-    }
-
-    public int getArmorstandId() {
+    public int getCameraId() {
         return ARMORSTAND_ID;
     }
 
